# benchmark-planning-communication

./: .env.example  .gitignore  .gitmodules  README.md  module_config.yaml  pyproject.toml
config/: benchmark_task_config.yaml  benchmark_task_config.yaml.example  benchmark_task_config_2.yaml  plan_grading_models.yaml  task_source_config.yaml.example  tool_options_config.yaml.example  tool_options_config_2.yaml  tool_options_config_novice.yaml
planning_communication/: __init__.py  config.py  execution_rubric_grader.py  planning_rubric_grader.py  task.py
scripts/: regrade_rubric.py  run_plan_grading.py
swe_bench_ext/: __init__.py  additional_tools.py  config.py  kb_filters.py  reminders.py  rubric_grader.py  rubric_utils.py  task.py
