[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-swe-bench-ext"
version = "0.1.0"
description = "SWE-Bench Extended benchmark task implementation for eval-framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.80.0",
    "lighthouse @ git+https://github.com/Mercor-Intelligence/lighthouse.git@latest",
    # Uses floating 'latest' tag - auto-updates when lighthouse releases new version
    # To release new lighthouse version:
    # 1. Create version tag: git tag v0.3.0 && git push origin v0.3.0
    # 2. Move latest tag: git tag -f latest v0.3.0 && git push -f origin latest
    # For dev testing: pip install "lighthouse @ git+https://github.com/Mercor-Intelligence/lighthouse.git@<branch-name>"
]

[project.urls]
Homepage = "https://github.com/Mercor-Intelligence/benchmark-swe-bench-ext"
Repository = "https://github.com/Mercor-Intelligence/benchmark-swe-bench-ext.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["swe_bench_ext"]

[tool.pyright]
pythonVersion = "3.12"

