[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-swe-bench-ext"
version = "0.1.0"
description = "SWE-Bench Extended benchmark task implementation for eval-framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.80.0",
]

[project.optional-dependencies]
lighthouse_https = [
    "lighthouse @ git+https://github.com/Mercor-Intelligence/lighthouse@latest",
]
lighthouse_ssh = [
    "lighthouse @ git+ssh://git@github.com/Mercor-Intelligence/lighthouse.git@latest",
]

[project.urls]
Homepage = "https://github.com/Mercor-Intelligence/benchmark-swe-bench-ext"
Repository = "https://github.com/Mercor-Intelligence/benchmark-swe-bench-ext.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["swe_bench_ext"]

[tool.pyright]
pythonVersion = "3.12"