[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-planning-communication"
version = "0.1.0"
description = "Planning & Communication benchmark task for lighthouse, extending benchmark-swe-bench-ext"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.80.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=1.60.0",
    "benchmark-swe-bench-ext @ git+https://github.com/Mercor-Intelligence/benchmark-swe-bench-ext@latest",
    "lighthouse @ git+https://github.com/Mercor-Intelligence/lighthouse@latest",
]

[project.urls]
Repository = "https://github.com/Mercor-Intelligence/benchmark-planning-communication.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["planning_communication"]

[tool.pyright]
pythonVersion = "3.12"
